update docs and add test for image

--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -34,6 +34,19 @@ The default card displays a heading and description. The link text defaults to `
 </Card>
 ```
 
+### Minimal
+
+The `minimal` card variant applies alternative presentation to the default card.
+
+```jsx live
+<Card href="https://github.com" variant="minimal">
+  <Card.Heading>Collaboration is the key to DevOps success</Card.Heading>
+  <Card.Description>
+    Everything you need to know about getting started with GitHub Actions.
+  </Card.Description>
+</Card>
+```
+
 ### Cta text
 
 The cta text defaults to `Learn more` and can be customized using the `ctaText` component.
