add fullWidth prop to Card component

--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -238,6 +238,7 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 | ------------------ | --------- | ----------- | -------- | ---------------------------------------------------------------- |
 | `ctaText`          | `string`  | `Read more` | `false`  | Label of the link at the bottom of the card                      |
 | `disableAnimation` | `boolean` | `false`     | `false`  | A flag to disable the default hover animation effect of the card |
+| `fullWidth`        | `boolean` | `false`     | `false`  | A flag to optionally fill the width of the parent container      |
 | `hasBorder`        | `boolean` | `false`     | `false`  | A flag used to provide a border to the card                      |
 | `href`             | `string`  |             | `true`   | URL to the card content                                          |
 
