--- a/apps/docs/content/components/Pagination.mdx
+++ b/apps/docs/content/components/Pagination.mdx
@@ -73,16 +73,31 @@ render(<App />)
 />
 ```
 
+### Custom data attributes
+
+```jsx live
+<Pagination
+  pageCount={3}
+  currentPage={1}
+  pageAttributesBuilder={(n) => {
+    return {
+      'data-custom-attribute': `custom-attribute-${n}`,
+    }
+  }}
+/>
+```
+
 ## Component props
 
 ### Pagination <Label>Required</Label>
 
-| name                   | type                                                                                   | default | required | description                                                                       |
-| ---------------------- | -------------------------------------------------------------------------------------- | ------- | -------- | --------------------------------------------------------------------------------- |
-| `pageCount`            | `number`                                                                               |         | `true`   | The total number of pages                                                         |
-| `currentPage`          | `number`                                                                               |         | `true`   | The current page number                                                           |
-| `onPageChange`         | `(e: React.MouseEvent, n: number) => void`                                             |         | `false`  | Callback function for when the page changes                                       |
-| `hrefBuilder`          | `(n: number) => string`                                                                |         | `false`  | Function to build the href for each page                                          |
-| `marginPageCount`      | `number`                                                                               |         | `false`  | Defines how many pages are to be displayed on the left and right of the component |
-| `showPages`            | <PropTableValues values={['boolean', 'ResponsivePageVisibilityMap'] } addLineBreaks /> |         | `false`  | Whether to show the page numbers                                                  |
-| `surroundingPageCount` | `number`                                                                               |         | `false`  | The number of pages to show on each side of the current page                      |
+| name                    | type                                                                                   | default | required | description                                                                       |
+| ----------------------- | -------------------------------------------------------------------------------------- | ------- | -------- | --------------------------------------------------------------------------------- |
+| `pageCount`             | `number`                                                                               |         | `true`   | The total number of pages                                                         |
+| `currentPage`           | `number`                                                                               |         | `true`   | The current page number                                                           |
+| `onPageChange`          | `(e: React.MouseEvent, n: number) => void`                                             |         | `false`  | Callback function for when the page changes                                       |
+| `hrefBuilder`           | `(n: number) => string`                                                                |         | `false`  | Function to build the href for each page                                          |
+| `pageAttributesBuilder` | `(n: number) => {[attributeName: string]: string}`                                     |         | `false`  | Forward custom attributes to pagination links.                                    |
+| `marginPageCount`       | `number`                                                                               |         | `false`  | Defines how many pages are to be displayed on the left and right of the component |
+| `showPages`             | <PropTableValues values={['boolean', 'ResponsivePageVisibilityMap'] } addLineBreaks /> |         | `false`  | Whether to show the page numbers                                                  |
+| `surroundingPageCount`  | `number`                                                                               |         | `false`  | The number of pages to show on each side of the current page                      |
