Fix and update Storybook links
Defaulting to the Playground story if available

--- a/apps/docs/content/components/Tooltip.mdx
+++ b/apps/docs/content/components/Tooltip.mdx
@@ -2,7 +2,7 @@
 title: Tooltip
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Tooltip/Tooltip.tsx
-storybook: '/brand/storybook/?path=/story/components-tooltip--default'
+storybook: '/brand/storybook/?path=/story/components-tooltip--playground'
 description: Use the tooltip component to display a short message when a user hovers or focuses an interactive element.
 ---
 
@@ -19,7 +19,7 @@ import {Tooltip} from '@primer/react-brand'
 
 ```jsx
 <Tooltip text="Sample tooltip content">
-    <Button>Action</Button>
+  <Button>Action</Button>
 </Tooltip>
 ```
 
@@ -31,7 +31,7 @@ As long as there is enough room in the viewport, the tooltip will appear in the 
 
 ```jsx
 <Tooltip text="Sample tooltip content" direction="e">
-    <Button>Action</Button>
+  <Button>Action</Button>
 </Tooltip>
 ```
 
@@ -43,15 +43,16 @@ Use this with caution. It is generally better to use a visible label for better 
 
 ```jsx
 <Tooltip text="Go fullscreen" type="label">
-    <Button hasArrow={false}><ScreenFullIcon /></Button>
+  <Button hasArrow={false}>
+    <ScreenFullIcon />
+  </Button>
 </Tooltip>
 ```
 
 ## Component props
 
-| name         | type                                                              | default         | required | description                             |
-| ------------ | ----------------------------------------------------------------- | --------------- | -------- | --------------------------------------- |
-| `direction`  | <PropTableValues values={['n', 'e', 's', 'w']} />                 | `'s'`           | `false`  | The side the tooltip appears on |
-| `text`       | `string`                                                          | `undefined`     | `true`   |  The text to be displayed in the tooltip |
-| `type`       | <PropTableValues values={['description', 'label']} />             | `'description'` | `false`  | The type of tooltip. `label` is used for labelling the element that triggers tooltip. `description` is used for describing or adding a suplementary information to the element that triggers the tooltip. |
-
+| name        | type                                                  | default         | required | description                                                                                                                                                                                               |
+| ----------- | ----------------------------------------------------- | --------------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `direction` | <PropTableValues values={['n', 'e', 's', 'w']} />     | `'s'`           | `false`  | The side the tooltip appears on                                                                                                                                                                           |
+| `text`      | `string`                                              | `undefined`     | `true`   | The text to be displayed in the tooltip                                                                                                                                                                   |
+| `type`      | <PropTableValues values={['description', 'label']} /> | `'description'` | `false`  | The type of tooltip. `label` is used for labelling the element that triggers tooltip. `description` is used for describing or adding a suplementary information to the element that triggers the tooltip. |
