update video links

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -22,8 +22,8 @@ TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a t
 
 ```jsx live
 <VideoPlayer title="GitHub media player">
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -31,11 +31,11 @@ TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a t
 
 ```jsx live
 <VideoPlayer
-  poster="/brand/assets/example-poster.png"
+  poster="https://primer.github.io/brand/assets/example-poster.png"
   title="GitHub media player"
 >
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -43,8 +43,8 @@ TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a t
 
 ```jsx live
 <VideoPlayer branding={false} title="GitHub media player">
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
