--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -9,7 +9,12 @@ description: Use the video player component to enable playback of self-hosted vi
 import {Label} from '@primer/react'
 
 ```js
-import {VideoPlayer, Controls} from '@primer/react-brand'
+import {
+  VideoPlayer,
+  PlayPauseButton,
+  ControlsBar,
+  SeekControl,
+} from '@primer/react-brand'
 ```
 
 ## Examples
@@ -38,7 +43,7 @@ import {VideoPlayer, Controls} from '@primer/react-brand'
 ## Without branding
 
 ```jsx live
-<VideoPlayer branding={false} title="GitHub media player">
+<VideoPlayer hasBranding={false} title="GitHub media player">
   <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
   <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
@@ -49,15 +54,15 @@ import {VideoPlayer, Controls} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer
   title="GitHub media player"
-  renderControls={({videoRef}) => (
-    <Controls.Bar>
-      <Controls.PlayPause videoRef={videoRef} />
-      <Controls.Seek videoRef={videoRef} />
-    </Controls.Bar>
+  renderControls={() => (
+    <ControlsBar>
+      <PlayPauseButton />
+      <SeekControl />
+    </ControlsBar>
   )}
 >
-  <VideoPlayer.Source src="/example.mp4" type="video/mp4" />
-  <VideoPlayer.Track src="/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -69,13 +74,16 @@ import {VideoPlayer, Controls} from '@primer/react-brand'
 
 `VideoPlayer` provides a React alternative to the native HTML `<video />`.
 
-| Name        | Type                                   | Default | Required | Description                                                          |
-| :---------- | :------------------------------------- | :-----: | :------: | :------------------------------------------------------------------- |
-| `title`     | `string`                               |         |  `true`  | Sets the title of the video                                          |
-| `children`  | `React.ReactNode`, `React.ReactNode[]` |         |  `true`  | Takes `<source>` and `<track>` elements to present video information |
-| `poster`    | `string`                               |         | `false`  | Sets an image as the starting frame for the video element            |
-| `branding`  | `boolean`                              |         | `false`  | Displays GitHub branding next to video title                         |
-| `className` | `string`                               |         | `false`  | Sets a custom class                                                  |
+| Name                | Type                                                               | Default | Required | Description                                                     |
+| :------------------ | :----------------------------------------------------------------- | :-----: | :------: | :-------------------------------------------------------------- |
+| `children`          | `React.ReactNode`, `React.ReactNode[]`                             |         |  `true`  | Takes `<VideoPlayer.Source>` and `<VideoPlayer.Track>` elements |
+| `title`             | `string`                                                           |         |  `true`  | Sets the title of the video                                     |
+| `showTitle`         | `boolean`                                                          | `true`  | `false`  | Displays the title of the video in the upper-left corner        |
+| `showBranding`      | `boolean`                                                          | `true`  | `false`  | Displays GitHub branding next to video title                    |
+| `poster`            | `string`                                                           |         | `false`  | Sets an image as the starting frame for the video element       |
+| `className`         | `string`                                                           |         | `false`  | Sets a custom class on the `<video>` element                    |
+| `renderControls`    | `(props: ControlsProps, context: UseVideoContext) => ReactElement` |         | `false`  | Sets a custom class on the `<video>` element                    |
+| `renderPlayOverlay` | `() => ReactElement`                                               |         | `false`  | Sets a custom class on the `<video>` element                    |
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
 
@@ -83,14 +91,7 @@ The component API supports all standard HTML attribute props, while providing so
   VideoPlayer.Source <Label>Required</Label>
 </h3>
 
-`VideoPlayer.Source` provides a React alternative to the native HTML `<source />`.
-
-| Name   | Type     | Default | Required | Description                           |
-| :----- | :------- | :-----: | :------: | :------------------------------------ |
-| `src`  | `string` |         |  `true`  | Sets the URL of the video content     |
-| `type` | `string` |         | `false`  | Sets media type for the video content |
-
-The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
+`VideoPlayer.Source` provides a React alternative to the native HTML `<source />`. The component API supports all standard HTML attribute props.
 
 <h3>
   VideoPlayer.Track <Label>Required</Label>
@@ -98,12 +99,61 @@ The component API supports all standard HTML attribute props, while providing so
 
 `VideoPlayer.Track` provides a React alternative to the native HTML `<track />`.
 
-| Name      | Type                                                                      | Default | Required | Description                                                                                                                              |
-| :-------- | :------------------------------------------------------------------------ | :-----: | :------: | :--------------------------------------------------------------------------------------------------------------------------------------- |
-| `src`     | `string`                                                                  |         |  `true`  | Sets the source of the VTT file containing captions                                                                                      |
-| `kind`    | `'subtitles'`, `'captions'`, `'descriptions'`, `'chapters'`, `'metadata'` |         | `false`  | Sets how the text track is meant to be used                                                                                              |
-| `srcLang` | `string`                                                                  |         | `false`  | Language of the text data. It must be a valid [BCP 47](https://r12a.github.io/app-subtags/) language tag.                                |
-| `label`   | `string`                                                                  |         | `false`  | A user-readable title of the text track which is used by the browser when listing available text tracks.                                 |
-| `default` | `boolean`                                                                 |         | `false`  | This attribute indicates that the track should be enabled unless the user's preferences indicate that another track is more appropriate. |
+| Name   | Type                                                                      |   Default    | Required | Description                                 |
+| :----- | :------------------------------------------------------------------------ | :----------: | :------: | :------------------------------------------ |
+| `kind` | `'subtitles'`, `'captions'`, `'descriptions'`, `'chapters'`, `'metadata'` | `'captions'` | `false`  | Sets how the text track is meant to be used |
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
+
+<h2>useVideo Context</h2>
+
+The `useVideo` context provides a comprehensive API for managing video playback, volume, closed captioning, and fullscreen mode.
+
+The context can be accessed from within the `renderControls` prop using the `context` parameter, or by using the `useVideo` hook directly in any component that is a child of `VideoPlayer`.
+
+Below is a detailed description of each property and method available in the `useVideo` context.
+
+| Name               | Type                                               | Description                                                                                    |
+| :----------------- | :------------------------------------------------- | :--------------------------------------------------------------------------------------------- |
+| `ref`              | `RefObject<HTMLVideoElement>`                      | A reference to the video element.                                                              |
+| `isPlaying`        | `boolean`                                          | Indicates if the video is currently playing.                                                   |
+| `volume`           | `number`                                           | The current volume of the video, ranging from 0 to 1.                                          |
+| `isMuted`          | `boolean`                                          | Indicates if the video is currently muted.                                                     |
+| `volumeBeforeMute` | `number`                                           | The volume of the video before it was muted, allowing for easy unmuting to the previous level. |
+| `duration`         | `number`                                           | The total duration of the video in seconds.                                                    |
+| `ccEnabled`        | `boolean`                                          | Indicates if closed captions are enabled.                                                      |
+| `isFullScreen`     | `boolean`                                          | Indicates if the video is currently in fullscreen mode.                                        |
+| `play`             | `() => void`                                       | Plays the video.                                                                               |
+| `pause`            | `() => void`                                       | Pauses the video.                                                                              |
+| `togglePlaying`    | `() => void`                                       | Toggles between playing and pausing the video.                                                 |
+| `setVolume`        | `(volumeValOrFn: SetStateAction<number>) => void`  | Sets the volume of the video.                                                                  |
+| `mute`             | `() => void`                                       | Mutes the video.                                                                               |
+| `unmute`           | `() => void`                                       | Unmutes the video.                                                                             |
+| `toggleMute`       | `() => void`                                       | Toggles between muting and unmuting the video.                                                 |
+| `setDuration`      | `(duration: number) => void`                       | Sets the duration of the video.                                                                |
+| `seek`             | `(time: number) => void`                           | Seeks the video to a specific time in seconds.                                                 |
+| `seekToPercent`    | `(percent: number) => void`                        | Seeks the video to a specific percentage of its duration.                                      |
+| `seekRelative`     | `(secondsValOrFn: SetStateAction<number>) => void` | Seeks the video forward or backward by a given number of seconds.                              |
+| `enableCC`         | `() => void`                                       | Enables closed captions.                                                                       |
+| `disableCC`        | `() => void`                                       | Disables closed captions.                                                                      |
+| `toggleCC`         | `() => void`                                       | Toggles closed captions on and off.                                                            |
+| `enterFullScreen`  | `() => void`                                       | Enters fullscreen mode.                                                                        |
+| `exitFullScreen`   | `() => void`                                       | Exits fullscreen mode.                                                                         |
+| `toggleFullScreen` | `() => void`                                       | Toggles between entering and exiting fullscreen mode.                                          |
+
+<h2>Keyboard shortcuts</h2>
+
+The `VideoPlayer` component supports the following keyboard shortcuts for controlling video playback:
+
+- `Space` or `k`: Toggles between playing and pausing the video.
+- `m`: Toggles between muting and unmuting the video.
+- `f`: Toggles between entering and exiting fullscreen mode.
+- `c`: Toggles closed captions on and off.
+- `ArrowLeft`: Seeks the video backward by 5 seconds.
+- `ArrowRight: Seeks the video forward by 5 seconds.
+- `j`: Seeks the video backward by 10 seconds.
+- `l`: Seeks the video forward by 10 seconds.
+- `ArrowUp` or `ArrowDown`: Increases or decreases the volume by 10%.
+- `0-9`: Seeks the video to a specific percentage of its duration.
+
+These shortcuts closely match what is commonly found in popular video players like YouTube and Vimeo.
