--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -150,7 +150,7 @@ The `VideoPlayer` component supports the following keyboard shortcuts for contro
 - `f`: Toggles between entering and exiting fullscreen mode.
 - `c`: Toggles closed captions on and off.
 - `ArrowLeft`: Seeks the video backward by 5 seconds.
-- `ArrowRight: Seeks the video forward by 5 seconds.
+- `ArrowRight`: Seeks the video forward by 5 seconds.
 - `j`: Seeks the video backward by 10 seconds.
 - `l`: Seeks the video forward by 10 seconds.
 - `ArrowUp` or `ArrowDown`: Increases or decreases the volume by 10%.
